// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead items should render typeahead items with match 1`] = `
<div
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
>
  <div
    className="theme-typeahead-input-icon tc-typeahead-typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={[Function]}
      onChange={undefined}
      onFocus={[Function]}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value="le"
    />
  </div>
  <div
    id={undefined}
  >
    <div
      className="theme-items-container tc-typeahead-items-container"
      id="react-autowhatever-my-search"
    >
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="theme-section-header tc-typeahead-section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className="theme-section-header-title tc-typeahead-section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="le title 1"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                   tit
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                   1
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibi
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                   tempus ardore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="title 2 les elephants elementaires ont des aile"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  tit
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                   2 
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                  s e
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                  phants e
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                  mentaires ont des ai
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="theme-section-header tc-typeahead-section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className="theme-section-header-title tc-typeahead-section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="title 3"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  tit
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                   3
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium va
                  <em
                    className="theme-highlight"
                  >
                    le
                  </em>
                  at.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with object items 1`] = `
<div
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
>
  <div
    className="theme-typeahead-input-icon tc-typeahead-typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={[Function]}
      onChange={undefined}
      onFocus={[Function]}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id={undefined}
  >
    <div
      className="theme-items-container tc-typeahead-items-container"
      id="react-autowhatever-my-search"
    >
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="theme-section-header tc-typeahead-section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className="theme-section-header-title tc-typeahead-section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="le title 1"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  le title 1
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="title 2 les elephants elementaires ont des aile"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  title 2 les elephants elementaires ont des aile
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="theme-section-header tc-typeahead-section-header"
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className="theme-section-header-title tc-typeahead-section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="title 3"
            >
              <span
                className="theme-item-title tc-typeahead-item-title"
              >
                <span>
                  title 3
                </span>
              </span>
              <p
                className="theme-item-description tc-typeahead-item-description"
              >
                <span>
                  description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with string items 1`] = `
<div
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
>
  <div
    className="theme-typeahead-input-icon tc-typeahead-typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={[Function]}
      onChange={undefined}
      onFocus={[Function]}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id={undefined}
  >
    <div
      className="theme-items-container tc-typeahead-items-container"
      id="react-autowhatever-my-search"
    >
      <ul
        className="theme-items"
        role="listbox"
      >
        <li
          id="react-autowhatever-my-search--item-0"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className="theme-item"
            title="category 1"
          >
            <span
              className="theme-item-title tc-typeahead-item-title"
            >
              <span>
                category 1
              </span>
            </span>
          </div>
        </li>
        <li
          id="react-autowhatever-my-search--item-1"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className="theme-item"
            title="category 2"
          >
            <span
              className="theme-item-title tc-typeahead-item-title"
            >
              <span>
                category 2
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead without items 1`] = `
<div
  className="theme-tc-typeahead-container tc-typeahead-container"
>
  <div
    className="theme-typeahead-input-icon tc-typeahead-typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={[Function]}
      onChange={undefined}
      onFocus={[Function]}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id={undefined}
  >
    <div
      className="theme-items-container tc-typeahead-items-container theme-no-result"
      id="react-autowhatever-my-search"
    >
      <span
        className="no-result"
      >
        No result.
      </span>
    </div>
  </div>
</div>
`;

exports[`Typeahead position should render search bar on the right 1`] = `
<div
  className="theme-tc-typeahead-container tc-typeahead-container theme-right"
>
  <div
    className="theme-typeahead-input-icon tc-typeahead-typeahead-input-icon"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={[Function]}
      onChange={undefined}
      onFocus={[Function]}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      type="text"
      value={undefined}
    />
  </div>
  <div
    id={undefined}
  >
    <div
      className="theme-items-container tc-typeahead-items-container"
      id="react-autowhatever-my-search"
    />
  </div>
</div>
`;

exports[`Typeahead with toggle should render button 1`] = `
<button
  aria-label="Toggle search bar"
  className="theme-only-icon-cls tc-typeahead-toggle btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <i
    aria-hidden="true"
    className="fa fa-search"
    focusable="false"
    title={null}
  />
</button>
`;
